--- a/style.css
+++ b/style.css
@@ -144,17 +144,16 @@ a:hover {
 
 /* SECTIONS */
 section {
-  position: relative;
+
   padding-top: 3vh;
   margin: 0 6rem;
   min-height: fit-content;
+  box-sizing: border-box;
   padding-bottom: 2rem;
 }
 
 .section-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   gap: 1.5rem;
 }
 
@@ -264,11 +263,7 @@ section {
 
 /* ABOUT SECTION */
 #about {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  position: relative;
   padding: 2rem 0;
 }
 
@@ -482,6 +477,8 @@ article .icon {
   display: block;
 }
 
+/* CONTACT */
+
 #contact {
   display: flex;
   justify-content: center;
@@ -519,6 +516,68 @@ article .icon {
 .email-icon {
   height: 2.5rem;
 }
+
+/* FOOTER SECTION */
+
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
+}
+
+
+/* SKILLS SECTION */
+
+#skills {
+  position: relative;
+  padding: 2rem 0;
+  margin: 0 5rem;
+  text-align: center;
+}
+
+.skills-container {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+}
+
+.skill-category {
+  background: #f9f9f9;
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+  border: 1px solid rgb(163, 163, 163);
+  width: 250px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+}
+
+.skill-category h3 {
+  margin-bottom: 1rem;
+  font-size: 1.25rem;
+  color: rgb(53, 53, 53);
+}
+
+.skill-category ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.skill-category li {
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  color: rgb(85, 85, 85);
+}
+
+#skills .arrow {
+  margin-top: 2rem;
+  height: 2rem;
+  cursor: pointer;
+}
+
 
 /* FOOTER SECTION */
 
